[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "awxclient"
version = "0.0.2"
authors = [
  { name="stana", email="author@example.com" },
]
description = "AWX python API client"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    'requests'
]

[project.urls]
"Homepage" = "https://github.com/stana/python-awxclient"
"Bug Tracker" = "https://github.com/stana/python-awxclient/issues"
